--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "scripts": {
     "start": "concurrently \"npm run server\" \"npm run client\"",
     "client": "react-scripts start",
-    "server": "nodemon server.js"
+    "server": "nodemon --exec babel-node server.js"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -23,6 +23,10 @@
     "not op_mini all"
   ],
   "devDependencies": {
+    "@babel/cli": "^7.2.3",
+    "@babel/core": "^7.3.4",
+    "@babel/node": "^7.2.2",
+    "@babel/preset-env": "^7.3.4",
     "concurrently": "^4.1.0"
   }
 }
