--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
     "joi": "^14.3.1",
+    "jquery": "^3.3.1",
     "jsonwebtoken": "^8.5.0",
     "lodash": "^4.17.11",
     "mongoose": "^5.4.19",
+    "popper.js": "^1.14.7",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
     "react-router-dom": "^4.4.0",
