--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "express": "^4.16.4",
     "font-awesome": "^4.7.0",
     "joi": "^14.3.1",
+    "joi-browser": "^13.4.0",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.5.0",
     "lodash": "^4.17.11",
