--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "font-awesome": "^4.7.0",
     "joi": "^14.3.1",
     "joi-browser": "^13.4.0",
+    "joi-objectid": "^2.0.0",
     "jquery": "^3.3.1",
     "jsonwebtoken": "^8.5.0",
     "jwt-decode": "^2.2.0",
