Product Add Feature

--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "bootstrap": "^4.3.1",
     "cors": "^2.8.5",
     "express": "^4.16.4",
+    "express-async-errors": "^3.1.1",
     "font-awesome": "^4.7.0",
+    "form-data": "^2.3.3",
     "joi": "^14.3.1",
     "joi-browser": "^13.4.0",
     "joi-objectid": "^2.0.0",
